--- a/app/views/painting/_form.html.erb
+++ b/app/views/painting/_form.html.erb
@@ -1,11 +1,21 @@
 <%= form_for @painting,:url=>painting_user_path(id:current_user.id), html: { multipart: true ,method: 'post',:id=>"new_image"}, remote: true, authenticity_token: true do |f| %>
+<div class="form-group">
 	<%=f.label :name%>
-	<%=f.text_field :name%>
+	<%=f.text_field :name,class:"form-control"%>
+	</div>
+	<div class="form-group">
 	<%=f.fields_for :image do|image|%>
 		<%=image.label "Choose Painting"%>
-        <%=image.file_field :location%>
+        <%=image.file_field :location,class:"form-control"%>
       <%end%>
+      </div>
+      <div class="form-group">
      <%=f.label :private%>
-     <%= f.check_box :privacy %>
-	<%= f.submit "Create" ,id:"new_painting_create"%>
+     <%= f.check_box :privacy%>
+     </div>
+      	<!-- Modal footer -->
+        <div class="modal-footer" id="modal-footer">
+          <%= f.submit "Create" ,id:"new_painting_create",class:"btn btn-primary"%>
+          <button type="button" class="btn btn-danger" data-dismiss="modal" id="modal_close_button">Cancel</button>
+        </div>
 <%end%>
