--- a/app/views/painting/_painting_iterator.html.erb
+++ b/app/views/painting/_painting_iterator.html.erb
@@ -1,17 +1,21 @@
-
+<h2>Paintings : <%=@paintings.length%></h2>
 <div class="row" id="user_iteration">
   <%@paintings.each do|painting|%>
   <div class="col-md-3">
-    <div class="card mb-4 box-shadow" style="max-width:100%;max-height:250px;min-height:250px;">
-      <img class="card-img-top" src="<%=painting.image.location.url%>">
+    <div class="card mb-4 box-shadow" style="max-width:100%;">
+      <img class="card-img-top" src="<%=painting.image.location.url%>" style="height: 50vh;object-fit: contain;">
+      <hr>
       <div class="card-body">
-      <p class="card-text"><%=painting.name%></p>
+        <center>
+          <p class="card-text"><%=painting.name%></p>
+        </center>
         <div class="d-flex justify-content-between align-items-center">
           <div class="btn-group">
-            <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-            <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+            <%if @owner%>
+              <span>Private : <input type="checkbox" <%="checked" if painting.private_painting?%> onclick="change_painting_privacy('<%=painting.id%>');"></span>
+            <%end%>
           </div>
-          <small class="text-muted">9 mins</small>
+          <small class="text-muted"><%=time_ago_in_words(painting.created_at) %></small>
         </div>
       </div>
     </div>
